--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+cffi==2.0.0
 click==8.3.1
 colorama==0.4.6
 dnspython==2.8.0
@@ -9,7 +12,10 @@ fastapi==0.128.0
 greenlet==3.3.0
 h11==0.16.0
 idna==3.11
+passlib==1.7.4
+psycopg==3.3.2
 psycopg2-binary==2.9.11
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
@@ -17,4 +23,5 @@ SQLAlchemy==2.0.45
 starlette==0.50.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 uvicorn==0.40.0
